--- a/Tcm.Interface.WebUi/src/index.html
+++ b/Tcm.Interface.WebUi/src/index.html
@@ -5,6 +5,14 @@
   <title>Asd</title>
   <base href="/">
 
+  <style type=''>
+    .has-error{
+      color:red !important;
+    }
+    
+
+
+</style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
  
 <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js" ></script>
